--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1552,8 +1552,14 @@ footer .footer-data .footer-right li:last-child::after {
   gap: 28px;
   padding: 15px 10px 17px 20px;
 }
+.quontation-table .que-head.quatation-gap {
+  gap: 31px;
+}
 .quontation-table .que-head.green-bg {
   background-color: #31b762;
+}
+.quontation-table .que-head.orange-bg {
+  background-color: #F6774E;
 }
 .quontation-table .que-head.puprple-bg {
   background-color: #B44FB0;
@@ -1616,6 +1622,9 @@ footer .footer-data .footer-right li:last-child::after {
   align-items: center;
   gap: 28px;
   padding: 14px 10px 14px 20px;
+}
+.quontation-table .que-body .que-tr.quatation-gap {
+  gap: 31px;
 }
 @media (max-width: 1440px) {
   .quontation-table .que-body .que-tr {
@@ -2118,6 +2127,75 @@ footer .footer-data .footer-right li:last-child::after {
   height: 200px;
 }
 
+.detail-back {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 40px;
+}
+@media (max-width: 575px) {
+  .detail-back {
+    margin-bottom: 38px;
+  }
+}
+.detail-back span,
+.detail-back i {
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 5px;
+  color: #6c6c6c;
+  font-weight: 700;
+}
+@media (max-width: 320px) {
+  .detail-back span,
+  .detail-back i {
+    font-size: 16px;
+  }
+}
+
+.detail-title h2 {
+  letter-spacing: 5px;
+  font-size: 30px;
+  line-height: 40px;
+  font-weight: 600;
+  color: #444444;
+  position: relative;
+  margin-bottom: 21px;
+}
+@media (max-width: 1199px) {
+  .detail-title h2 {
+    padding-left: 4px;
+    font-size: 24px;
+    line-height: 28px;
+  }
+}
+@media (max-width: 768px) {
+  .detail-title h2 {
+    padding-left: 13px;
+    font-size: 16px;
+  }
+}
+@media (max-width: 320px) {
+  .detail-title h2 {
+    padding-left: 13px;
+    font-size: 14px;
+  }
+}
+.detail-title h2:after {
+  position: absolute;
+  top: 7px;
+  left: 0;
+  background-color: #31b762;
+  content: "";
+  width: 12px;
+  height: 25px;
+}
+@media (max-width: 1199px) {
+  .detail-title h2:after {
+    top: 2px;
+  }
+}
+
 @media (max-width: 575px) {
   .record-qr {
     padding: 0 20px;
@@ -2168,31 +2246,6 @@ footer .footer-data .footer-right li:last-child::after {
 @media (max-width: 1199px) {
   .record-qr .detail-title h2:after {
     top: 2px;
-  }
-}
-.record-qr .detail-back {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  margin-bottom: 40px;
-}
-@media (max-width: 575px) {
-  .record-qr .detail-back {
-    margin-bottom: 38px;
-  }
-}
-.record-qr .detail-back span,
-.record-qr .detail-back i {
-  font-size: 18px;
-  line-height: 24px;
-  letter-spacing: 5px;
-  color: #6c6c6c;
-  font-weight: 700;
-}
-@media (max-width: 320px) {
-  .record-qr .detail-back span,
-  .record-qr .detail-back i {
-    font-size: 16px;
   }
 }
 .record-qr .online-title {
@@ -2404,6 +2457,153 @@ footer .footer-data .footer-right li:last-child::after {
 
 .no-space {
   letter-spacing: 0 !important;
+}
+
+.quotation-progress .quotation-title {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  margin-bottom: 54px;
+  gap: 17px;
+}
+.quotation-progress .quotation-title button {
+  font-size: 18px;
+  border-radius: 20px;
+  line-height: 24px;
+  font-weight: 500;
+  letter-spacing: 2px;
+}
+.quotation-progress .quotation-title button:first-child {
+  border: 1px solid #585858;
+  width: 129px;
+  height: 54px;
+  color: #585858;
+}
+.quotation-progress .quotation-title button:last-child {
+  background-color: #F6774E;
+  width: 205px;
+  height: 54px;
+  color: #ffffff;
+}
+.quotation-progress .quotation-status {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 28px;
+}
+.quotation-progress .quotation-status .status-btn {
+  padding: 12px 38px 11px 49px;
+  background-color: #39C2AD;
+  border-radius: 50px;
+  color: #ffffff;
+  font-size: 18px;
+  line-height: 2px;
+  letter-spacing: 2px;
+  font-weight: 500;
+}
+.quotation-progress .quotation-status .status-btn i {
+  font-size: 18px;
+  color: #ffffff;
+  margin-right: 9px;
+}
+.quotation-progress .progress-data {
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
+  border-radius: 40px;
+  padding: 25px 15px 115px 19px;
+  width: 976px;
+  margin-bottom: 68px;
+}
+.quotation-progress .progress-data .bookdata {
+  margin-bottom: 51px;
+}
+.quotation-progress .progress-data .bookdata .progress-right {
+  margin-top: 16px;
+}
+.quotation-progress .progress-data .bookdata .progress-right h2 {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 30px;
+  color: #444444;
+  margin-bottom: 34px;
+}
+.quotation-progress .progress-data .bookdata .progress-right ul {
+  margin-bottom: 34px;
+}
+.quotation-progress .progress-data .bookdata .progress-right ul li {
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 2px;
+  font-weight: 600;
+  color: #787878;
+  margin-bottom: 6px;
+}
+.quotation-progress .progress-data .bookdata .progress-right p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 2px;
+  color: #787878;
+  width: 100%;
+  max-width: 381px;
+  margin-bottom: 10px;
+}
+.quotation-progress .progress-data .book-content h3 {
+  color: #787878;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 2px;
+  font-weight: 700;
+  margin-bottom: 12px;
+}
+.quotation-progress .progress-data .book-content .height-para {
+  height: 287px;
+  overflow-y: auto;
+}
+.quotation-progress .progress-data .book-content .height-para p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 2px;
+  color: #787878;
+  padding-right: 31px;
+}
+.quotation-progress .bottom-table-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 139px;
+  margin-bottom: 34px;
+}
+.quotation-progress .bottom-table-title .nav-item:first-child.active {
+  color: #008BD5;
+}
+.quotation-progress .bottom-table-title .nav-item:last-child.active {
+  color: #F6774E;
+}
+.quotation-progress .bottom-table-title .nav-item .nav-link {
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 28px;
+  letter-spacing: 5px;
+  color: #444444;
+}
+
+/* Custom scrollbar */
+.height-para::-webkit-scrollbar {
+  width: 12px;
+}
+
+.height-para::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+.height-para::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+.height-para::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 /*# sourceMappingURL=style.css.map */
