--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1595,8 +1595,15 @@ footer {
     // justify-content: space-between;
     gap: 28px;
     padding: 15px 10px 17px 20px;
+    &.quatation-gap{
+      gap: 31px;
+    }
     &.green-bg{
       background-color: $green-color;
+    }
+    &.orange-bg{
+      background-color: 
+      #F6774E;
     }
     &.puprple-bg{
       background-color: #B44FB0;
@@ -1635,6 +1642,9 @@ footer {
       // justify-content: space-between;
       gap: 28px;
       padding: 14px 10px 14px 20px;
+      &.quatation-gap{
+        gap: 31px;
+      }
       @media (max-width: #{$xlll}) {
        gap: 10px;
        padding: 10px;
@@ -2020,6 +2030,63 @@ footer {
 
 
 // --registration record--start
+.detail-back {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 40px;
+  @media (max-width: #{$sm}) {
+    margin-bottom: 38px;
+   }
+  span,
+  i {
+    font-size: 18px;
+    line-height: 24px;
+    @include latter-space();
+    color: #6c6c6c;
+    font-weight: 700;
+    @media (max-width: #{$xss}) {
+      font-size: 16px;
+    }
+  }
+}
+.detail-title {
+  h2 {
+    @include latter-space();
+    font-size: 30px;
+    line-height: 40px;
+    font-weight: 600;
+    color: #444444;
+    position: relative;
+    margin-bottom: 21px;
+
+    @media (max-width: #{$xll}) {
+      padding-left: 4px;
+      font-size: 24px;
+      line-height: 28px;
+    }
+    @media (max-width: #{$med}) {
+      padding-left: 13px;
+      font-size: 16px;
+    }
+    @media (max-width: #{$xss}) {
+      padding-left: 13px;
+      font-size: 14px;
+    }
+    &:after {
+      position: absolute;
+      top: 7px;
+      left: 0;
+      background-color: $green-color;
+      content: "";
+      width: 12px;
+      height: 25px;
+      @media (max-width: #{$xll}) {
+        top: 2px;
+      }
+    }
+  }
+}
 .record-qr{
   @media (max-width: #{$sm}) {
   padding: 0 20px;
@@ -2064,26 +2131,7 @@ footer {
       }
     }
   }
-  .detail-back {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    margin-bottom: 40px;
-    @media (max-width: #{$sm}) {
-      margin-bottom: 38px;
-     }
-    span,
-    i {
-      font-size: 18px;
-      line-height: 24px;
-      @include latter-space();
-      color: #6c6c6c;
-      font-weight: 700;
-      @media (max-width: #{$xss}) {
-        font-size: 16px;
-      }
-    }
-  }
+ 
   .online-title{
     width: 776px;
     margin: 0 auto;
@@ -2273,3 +2321,173 @@ footer {
 letter-spacing: 0 !important;
 }
 // --registration record end
+
+
+
+// ---quotation-progress----start
+.quotation-progress{
+  .quotation-title{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    margin-bottom: 54px;
+    gap: 17px;
+    button{
+font-size: 18px;
+border-radius: 20px;
+line-height: 24px;
+font-weight: 500;
+letter-spacing: 2px;
+      &:first-child{
+        border: 1px solid #585858;
+        width: 129px;
+        height: 54px;
+        color: 
+        #585858;
+      }
+      &:last-child{
+        background-color: 
+        #F6774E;
+        width: 205px;
+        height: 54px;
+        color: $white-color;
+      }
+    }
+  }
+  .quotation-status{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 28px;
+    .status-btn{
+      padding: 12px 38px 11px 49px;
+      // width: 306px;
+      // height: 48px;
+      background-color: #39C2AD;
+      border-radius: 50px;
+      color: $white-color;
+      font-size: 18px;
+      line-height: 2px;
+      letter-spacing: 2px;
+      font-weight: 500;
+      i{
+        font-size: 18px;
+        color: $white-color;
+        margin-right: 9px;
+      }
+    }
+  }
+  .progress-data{
+    box-shadow: 0 0 6px 0  rgba(0, 0, 0, 0.25);
+    border-radius: 40px;
+    padding: 25px 15px 115px 19px;
+    width: 976px;
+    margin-bottom: 68px;
+    .bookdata{
+margin-bottom: 51px;
+      .progress-right{
+        margin-top: 16px;
+        h2{
+          font-weight: 700;
+          font-size: 22px;
+          line-height: 30px;
+          color: 
+          #444444
+          ;
+          margin-bottom: 34px;
+        }
+        ul{
+          margin-bottom: 34px;
+          li{
+            font-size: 18px;
+            line-height: 24px;
+            letter-spacing: 2px;
+            font-weight: 600;
+            color: 
+            #787878;
+            margin-bottom: 6px;
+          }
+        }
+        p{
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 30px;
+          letter-spacing: 2px;
+          color: 
+          #787878;
+          width: 100%;
+          max-width: 381px;
+          margin-bottom: 10px;
+        }
+      }
+    }
+    .book-content{
+      h3{
+        color: 
+        #787878;
+        font-size: 16px;
+        line-height: 30px;
+        letter-spacing: 2px;
+        font-weight: 700;
+        margin-bottom: 12px;
+      }
+      .height-para{
+        height: 287px;
+            overflow-y: auto;
+            
+        p{
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 30px;
+          letter-spacing: 2px;
+          color: 
+          #787878;
+            padding-right: 31px;
+        }
+      }
+    }
+    
+  }
+  .bottom-table-title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 139px;
+    margin-bottom: 34px;
+    .nav-item{
+      &:first-child.active{
+        color: #008BD5;
+      }
+      &:last-child.active{
+        color: #F6774E;
+      }
+      .nav-link{
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 28px;
+        @include latter-space();
+        color: 
+        #444444 ;
+      }
+    }
+  }
+}
+/* Custom scrollbar */
+.height-para::-webkit-scrollbar {
+  width: 12px; 
+}
+
+.height-para::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+  border-radius: 10px; 
+}
+
+.height-para::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 10px;
+}
+
+.height-para::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+// ---quotation-progress--end
