--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2796,10 +2796,6 @@ body {
   z-index: 99999;
 }
 
-button {
-  margin: 10px;
-}
-
 .dropdown-toggle::after {
   display: none !important;
 }
@@ -3381,6 +3377,212 @@ button:focus:not(:focus-visible) {
 
 .height-para::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+.register-list img {
+  width: 100%;
+  object-fit: cover;
+  margin-bottom: 35px;
+}
+
+.register-list-form {
+  margin-bottom: 87px;
+}
+.register-list-form .form-list {
+  background-color: #F6774E;
+  margin: 0 160px;
+  padding: 14px 20px;
+  border-radius: 10px;
+}
+.register-list-form .form-list .form-list-data input {
+  height: 50px;
+}
+.register-list-form .form-list .form-list-data input::placeholder {
+  color: #9A9A9A;
+  font-size: 16px;
+  line-height: 22px;
+  letter-spacing: 5px;
+  font-weight: 500;
+}
+.register-list-form .form-list .form-list-data .btn {
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 700;
+  color: #444444;
+}
+.register-list-form .form-list .form-list-data .btn1 {
+  color: #ffffff;
+  border: 2px solid #ffffff;
+  border-radius: 20px;
+  padding: 10px 15px;
+  margin-right: 9px;
+  width: 100%;
+  letter-spacing: 5px;
+}
+@media (max-width: 1440px) {
+  .register-list-form .form-list .form-list-data .btn1 {
+    width: 140px;
+  }
+}
+.register-list-form .form-list .form-list-data .btn2 {
+  background-color: #FBEE6C;
+  color: #000;
+  padding: 10px 18px 10px 24px;
+  border-radius: 20px;
+  width: 70%;
+  letter-spacing: 5px;
+}
+@media (max-width: 1440px) {
+  .register-list-form .form-list .form-list-data .btn2 {
+    width: 99px;
+  }
+}
+.register-list-form .form-list .form-list-data .form-list-content {
+  background-color: #FFFEEF;
+  padding: 26px 24px;
+  margin-top: 39px;
+  border-radius: 5px;
+}
+
+.list-slider {
+  padding-left: 85px;
+}
+.list-slider .list-slider-left {
+  position: relative;
+}
+.list-slider .list-slider-left .left-img {
+  width: 70%;
+}
+@media (max-width: 1199px) {
+  .list-slider .list-slider-left .left-img {
+    width: auto;
+  }
+}
+.list-slider .list-slider-left h2 {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 60px;
+  line-height: 82px;
+  letter-spacing: 8px;
+  font-weight: 100;
+  color: transparent;
+  -webkit-text-stroke: 1px #FB4B13;
+  text-stroke: 1px 1px #FB4B13;
+  width: 100%;
+  max-width: 200px;
+}
+.list-slider .list-slider-left .btn {
+  background-color: #FBEE6C;
+  padding: 14px 51px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 27px;
+  color: #444444;
+  letter-spacing: 7px;
+  border-radius: 20px;
+}
+
+.slider .slide-card {
+  position: relative;
+  margin-bottom: 27px;
+  box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.25);
+}
+.slider .slide-card .top-img {
+  width: 100%;
+}
+.slider .slide-card .slider-data {
+  padding: 27px 15px 47px 15px;
+}
+.slider .slide-card .content {
+  margin-bottom: 12px;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+  color: #3A3A3A;
+  margin-bottom: 12px;
+}
+.slider .slide-card ul li {
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 400;
+  color: #787878;
+  margin-bottom: 4px;
+  display: flex;
+  align-items: baseline;
+  gap: 10px;
+}
+.slider .slide-card ul li img {
+  object-fit: contain;
+}
+.slider .owl-carousel .owl-dots .owl-dot {
+  width: 15px;
+  height: 15px;
+  margin: 5px;
+  background: #c20e0e;
+  border-radius: 50%;
+}
+.slider .owl-carousel .owl-dots .owl-dot.active {
+  background: #000;
+}
+.slider .owl-carousel .owl-dots {
+  text-align: center;
+  margin-top: 20px;
+}
+.slider .owl-dots {
+  margin-top: 0;
+}
+.slider .owl-nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.btm-slider {
+  background-color: #F0F9F3;
+  padding: 28px 75px 68px 40px;
+  margin-top: 74px;
+}
+.btm-slider .left-btm-data {
+  position: relative;
+}
+.btm-slider .left-btm-data .empty .div1 {
+  background-color: #31b762;
+  height: 20px;
+  width: 99px;
+  margin-bottom: 46px;
+}
+.btm-slider .left-btm-data .empty .div2 {
+  position: absolute;
+  top: 33px;
+  left: -70px;
+  background-color: #008bd5;
+  height: 20px;
+  width: 131px;
+}
+.btm-slider .left-btm-data .strock-h2 h2 {
+  font-size: 60px;
+  line-height: 82px;
+  letter-spacing: 8px;
+  font-weight: 100;
+  color: transparent;
+  -webkit-text-stroke: 1px #29B45C;
+  text-stroke: 1px 1px #29B45C;
+  width: 100%;
+  max-width: 192px;
+  margin-bottom: 30px;
+}
+.btm-slider .left-btm-data .btn {
+  background-color: #FBEE6C;
+  font-weight: 700;
+  line-height: 28px;
+  letter-spacing: 5px;
+  font-size: 20px;
+  color: #444444;
+  padding: 15px 12px;
+  border-radius: 20px;
+  width: 100%;
+  max-width: 100px;
 }
 
 /*# sourceMappingURL=style.css.map */
